bk_ida/gccida/c3/expr_size
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expr_size/src/explow.c:760:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( ( unsigned __int8)HIBYTE( WORD2( sizetype_tab[0]->block.abstract_origin)) >> 1), 
  ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expr_size/src/obj/explow.o] Error 1
